Add mocha and spec.

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "starter"
   ],
   "author": "Doug Hardy",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "mocha": "^2.3.3"
+  }
 }
