--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node starter project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "node",
