--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-load-plugins": "^1.0.0-rc.1",
     "mocha": "^2.3.3"
   }
 }
