--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
+    "gulp-mocha": "^2.1.3",
+    "gulp-plumber": "^1.0.1",
     "mocha": "^2.3.3"
+  },
+  "config": {
+    "mocha": {
+      "globals": {}
+    }
   }
 }
