--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Doug Hardy",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^5.8.25",
     "gulp": "^3.9.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-mocha": "^2.1.3",
