--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "node-starter",
   "version": "1.0.0",
   "description": "Node starter project",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "gulp test"
   },
   "keywords": [
     "node",
@@ -13,16 +13,27 @@
   "author": "Doug Hardy",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^5.8.23",
     "babel-core": "^5.8.25",
+    "babel-runtime": "^5.8.25",
+    "chai": "^3.3.0",
     "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.1",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-mocha": "^2.1.3",
     "gulp-plumber": "^1.0.1",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "path": "^0.12.7",
+    "sinon": "^1.17.1",
+    "sinon-chai": "^2.8.0"
   },
   "config": {
     "mocha": {
-      "globals": {}
+      "globals": [
+        "stub",
+        "spy",
+        "expect"
+      ]
     }
   }
 }
