--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
     "chai": "^3.3.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
+    "gulp-if": "^2.0.0",
+    "gulp-jscs": "^3.0.1",
+    "gulp-jshint": "^1.11.2",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-mocha": "^2.1.3",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
+    "jscs": "^2.3.0",
+    "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.3",
     "path": "^0.12.7",
     "sinon": "^1.17.1",
@@ -30,9 +36,13 @@
   "config": {
     "mocha": {
       "globals": [
+        "beforeEach", 
+        "afterEach", 
+        "describe", 
+        "it", 
+        "expect", 
         "stub",
-        "spy",
-        "expect"
+        "spy"
       ]
     }
   }
