--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-core": "^5.8.25",
+    "babel-plugin-rewire": "^0.1.22",
     "babel-runtime": "^5.8.25",
     "chai": "^3.3.0",
     "gulp": "^3.9.0",
