Add readme and license.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-starter",
+  "name": "node-es2015-starter",
   "version": "1.0.0",
   "description": "Node starter project",
   "main": "dist/index.js",
