--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-rewire": "^0.1.22",
     "babel-runtime": "^5.8.25",
     "chai": "^3.3.0",
+    "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
     "gulp-if": "^2.0.0",
@@ -31,6 +32,7 @@
     "isparta": "^3.1.0",
     "jscs": "^2.3.0",
     "jshint-stylish": "^2.0.1",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.3.3",
     "path": "^0.12.7",
     "sinon": "^1.17.1",
